# containerd-cloudhypervisor

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: Dockerfile.installer
.github/copilot/: aks-benchmark.md
.github/skills/aks-benchmark/: SKILL.md
.github/workflows/: ci.yml  release.yml
charts/cloudhv-installer/: Chart.yaml  values.yaml
charts/cloudhv-installer/templates/: daemonset.yaml  runtimeclass.yaml
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: container.rs  lib.rs  main.rs  mount.rs  pressure.rs  reaper.rs  server.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  types.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/shim/: Cargo.toml
crates/shim/benches/: vm_overhead.rs
crates/shim/src/: annotations.rs  config.rs  hypervisor.rs  image_cache.rs  instance.rs  lib.rs  main.rs  memory.rs  netns.rs  pool.rs  snapshot.rs  virtfs.rs  vm.rs  vsock.rs
crates/shim/tests/integration/: helpers.rs  main.rs  vm_lifecycle.rs
docs/: README.md  architecture.md  configuration.md  development.md  performance.md  releasing.md
example/agent-sandbox/: run_fibonacci.py
example/aks/: README.md
example/aks/installer/: Dockerfile  install.sh
example/crictl/: README.md
guest/kernel/: build-kernel.sh
guest/kernel/configs/: microvm-aarch64.config  microvm.config
guest/rootfs/: agent.conf  build-rootfs.sh
hacks/: Readme.md  build-dev-image.sh  build-guest-kernel.sh  build-guest.sh  build-host-deps.sh  build-host.sh  build-static-rust.sh  build-sysext.sh  test-sysext.sh  util.inc
installer/: Dockerfile  install.sh  test-install.sh
installer/root.common/usr/share/cloudhv/: config.json
installer/root.common/usr/share/cloudhv/demo/: demo-container.json  demo.sh
installer/root.sysext/usr/share/cloudhv/etc/cni/net.d/: 10-bridge.conflist
proto/: agent.proto
sysext/root/usr/lib/extension-release.d/: extension-release.containerd-cloudhypervisor
sysext/root/usr/lib/systemd/system/: cloudhv-sandbox-daemon.service
sysext/root/usr/lib/systemd/system/containerd.service.d/: 10-use-custom-config.conf
sysext/root/usr/lib/systemd/system/multi-user.target.d/: 10-cloudhv-sandbox-daemon.conf
sysext/root/usr/lib/tmpfiles.d/: 10-containerd-cloudhypervisor.conf
sysext/root/usr/share/cloudhv/: config.json  daemon.json
sysext/root/usr/share/cloudhv/demo/: demo-sandbox.json  demo.sh
sysext/root/usr/share/cloudhv/etc/cni/net.d/: 10-bridge.conflist
sysext/root/usr/share/cloudhv/etc/containerd/: config.toml.snippet
