[workspace]
members = [
    "crates/shim",
    "crates/agent",
    "crates/proto",
    "crates/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/devigned/containerd-cloudhypervisor"

[workspace.dependencies]
# Async runtime (minimal features for low memory)
tokio = { version = "1", features = ["rt", "net", "time", "io-util", "sync", "macros", "signal", "process", "fs"] }

# RPC
ttrpc = { version = "0.9", features = ["async"] }
protobuf = "3"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# System
nix = { version = "0.29", features = ["signal", "mount", "sched", "process", "fs"] }
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
cloudhv-proto = { path = "crates/proto" }
cloudhv-common = { path = "crates/common" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
opt-level = "z" # Optimize for size
