[package]
name = "cloudhv-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-VM guest agent for containerd-cloudhypervisor"

[[bin]]
name = "cloudhv-agent"
path = "src/main.rs"

[dependencies]
cloudhv-common = { path = "../common" }

# Async runtime (single-threaded for minimal memory)
tokio = { version = "1", features = ["rt", "net", "time", "io-util", "sync", "macros", "signal", "process", "fs"] }

# RPC — agent uses ttrpc 0.9 for vsock server support
ttrpc = { version = "0.9", features = ["async"] }
protobuf = "3"
async-trait = "0.1"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# System
nix = { version = "0.29", features = ["signal", "mount", "sched", "process", "fs", "poll"] }
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
ttrpc-codegen = "0.6"

[workspace]
