[package]
name = "cloudhv-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and constants for containerd-cloudhypervisor"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = "2"
